fix(React core): Popup placement accounts for target margin, target margin is no longer collapsed

--- a/packages/react/ds-core/src/ui/Tooltip/common/TooltipArea/styles.css
+++ b/packages/react/ds-core/src/ui/Tooltip/common/TooltipArea/styles.css
@@ -4,10 +4,5 @@
     cursor: pointer;
     position: relative;
     display: inline-block;
-
-    & > * {
-      /* The tooltip targets must have no margin in order for tooltip placements to work correctly */
-      margin: 0 !important;
-    }
   }
 }
